[package]
name = "actix-web-jsonschema"
description = "JsonSchema Validation Extractor for Actix Web."
version = "1.0.2"
edition = "2021"
license = "MIT"
repository = "https://github.com/yassun4dev/actix-web-jsonschema.git"
authors = ["yassun4dev <yassun4dev@outlook.com>"]
keywords = ["validation", "serde", "jsonschema", "actix-web"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
actix-web = { version = "4", features = ["macros"] }
futures = "0.3"
jsonschema = "0.16"
schemars = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serde_qs = { version = "0.10", optional = true, features = ["actix4"] }
tracing = "0.1"
validator = { version = "0.16", optional = true, features = ["derive"] }

[features]
validator = ["dep:validator"]
qs_query = ["dep:serde_qs"]
